# Swift-Onboarding-Components

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .prettierignore  .semgrepignore  CROSS_DEVICE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Footprint.podspec  FootprintOnboardingComponents.podspec  Makefile  Package.resolved  Package.swift  Package.swift.bak  README.md  STYLE_GUIDE.md  biome.json  changelog-cocoapods.md  changelog.md  enclave.dockerfile  encrypted.env  musl_build.sh
backend/: .dockerignore  .env.age  .gitignore  Cargo.toml  DEVELOPMENT.md  ENCLAVE_BUILD.md  ENCLAVE_SIGNING_KEY.md  Makefile  README.md  STYLE_GUIDE.md  api.dockerfile  compose.yaml  enclave.dockerfile  enclave_build.dockerfile  enclave_eif_package.dockerfile  enclave_package.dockerfile  enclave_proxy_package.dockerfile  enclave_tp_test.sh  encrypted.env  encrypted_env_key.base64  rustfmt.toml
backend/ci/: ditto.py  requirements.txt
backend/ci/scripts/: check_db_migrations.sh  update_open_api.py
backend/ci/tests/: auth.py  bifrost_client.py  cert_fixtures.py  conftest.py  constants.py  headers.py  identify_client.py  image_fixtures.py  pytest.ini  test_api.py  test_audit_events.py  test_bifrost.py  test_client_token.py  test_dashboard.py  test_docs.py  test_investor_profile.py  test_kyb.py  test_label_tags.py  test_misc.py  test_multi_kyc_kyb.py  test_multi_tenant.py  test_my1fp.py  test_non_portable.py  test_non_portable_kyb.py  test_ob_config.py  test_ob_session.py  test_open_api.py  test_pagination.py  test_preview.py  test_proxy.py  test_replace_ci.py  test_session.py  test_tenant.py  test_update_auth.py  test_webhooks.py  types.py  utils.py  webauthn_simulator.py
backend/ci/tests/api/: test_business.py  test_decisions.py  test_decrypt_ops.py  test_duplicates.py  test_entity.py  (+7 more)
backend/components/api/: Cargo.toml  build.rs
backend/components/api_types/: .gitignore  Cargo.toml  README.md
backend/components/api_wire_types/: .gitignore  Cargo.toml
backend/components/app_attest/: Cargo.toml
backend/components/billing/: Cargo.toml
backend/components/commands/: Cargo.toml  README.md
backend/components/db/: Cargo.toml  diesel.toml
backend/components/ditto/: Cargo.toml  README.md  fly.toml
backend/components/feature_flag/: Cargo.toml
backend/components/idv/: Cargo.toml
backend/components/macros/: Cargo.toml
backend/components/newtypes/: Cargo.toml
backend/components/privacy_pass/: Cargo.toml
backend/components/prometheus/: Cargo.toml
backend/components/selfie/: Cargo.toml
backend/components/selfie_doc/: Cargo.toml
backend/components/twilio/: Cargo.toml
backend/components/vault_dr/: Cargo.toml  README.md
backend/components/vault_dr_client/: Cargo.toml
backend/components/webhooks/: Cargo.toml
backend/devbox/: create.sh
backend/external_tools/ditto/: Cargo.toml  Dockerfile  fly.toml
backend/external_tools/footprint-dr/: Cargo.toml  HOW_TO_RELEASE.md  RELEASE.md  RELEASE_NOTES.md
backend/external_tools/hooky/: Cargo.toml  Dockerfile  README.md  fly.toml
backend/formal_methods/vault_disaster_recovery/: .gitignore  FiniteSetsExt.tla  Folds.tla  Functions.tla  Makefile  README.md  SequencesExt.tla  vdr.cfg  vdr.tla  vdr_large_terminatesspec.cfg  vdr_medium_fairspec.cfg  vdr_small_fairspec.cfg
backend/images/api/: Dockerfile
backend/images/enclave/: Dockerfile
backend/images/enclave-dev/: Dockerfile
backend/images/enclave-proxy/: Dockerfile
backend/images/enclave-proxy-dev/: Dockerfile
backend/images/integration-tests/: Dockerfile  entrypoint.sh  localstack-aws-config.toml  localstack-aws-credentials.toml
backend/infra/: .gitignore  Pulumi.dev.yaml  Pulumi.prod.yaml  SECURITY_GROUPS.md  add_secret.sh  aws_login.sh  certs.ts  db.ts  enclave_key.ts  ephemeral-dev.sh  index.ts  package.json  pulumi_login.sh  vpc.ts
backend/infra/config/: airplane-agent.yaml  otel.yml
backend/infra/monitoring/: otel.yml  prom-otel.yml
backend/infra/service/: cluster.ts
backend/infra/src/: airplane.ts  api_service.ts  app_cdn.ts  app_cdn_waf.ts  asset_cdn.ts  cdn.ts  certs.ts  cluster.ts  config.ts  containers.ts  cron.ts  datadog.ts  db.ts  db_neon.ts  dns.ts  ecr.ts  ecs_cluster.ts  ecs_roles.ts  enclave_key.ts  hmac_key.ts  id_cdn.ts  main.ts  nitro_service.ts  s3.ts  sealed_ikek.ts  secrets.ts  service.ts  sg.ts  stack_metadata.ts  vpc.ts  worker.ts
backend/infra_global/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  index.ts  package.json
backend/infra_global/pulumi_iam_policy/: acm.json  base.json  cloudformation.json  cloudfront.json  ec2.json  iam.json  kms.json  rds.json  ssm.json
backend/infra_global/src/: main.ts  util.ts
backend/internal_tools/: README.md  clean-crates.sh  ls-crates.sh
backend/internal_tools/ai_playground/: Cargo.toml
backend/internal_tools/airplane/: airplane.dev.yaml  airplane.yaml  package-lock.json  package.json  tsconfig.json  utils.ts
backend/internal_tools/fp_cli/: Cargo.toml
backend/internal_tools/vendor_scripts/: requirements.txt  test_docv.py
backend/machine_images/: Makefile  enclave.pkr.hcl  enclave.yml  inventory.yml
backend/scripts/: update-open-api.py
backend/tls_proxy/: setup.sh
backend/util/scripts/: enclave_tp_test.sh  install_rage.sh  server_version_wait.sh
backend/util/tls_proxy/: local_proxy.json.example
components/api/: Cargo.toml
components/api/src/: challenge.rs  config.rs  enclave.rs  errors.rs  main.rs  signed_hash.rs  telemetry.rs  tenant.rs  user.rs
components/app_attest/: Cargo.toml
components/app_attest/src/: apple.rs  tests.rs
components/db/: Cargo.toml  diesel.toml
components/db/src/: access_event.rs  challenge.rs  errors.rs  lib.rs  main.rs  onboarding.rs  schema.rs  scoped_users.rs  session.rs  tenant.rs  test.rs  types.rs  user.rs  user_data.rs  user_vault.rs  webauthn_credentials.rs
components/enclave/crypto/: Cargo.toml
components/enclave/enclave/: Cargo.toml  build.rs
components/newtypes/: Cargo.toml
components/newtypes/src/: auth_token.rs  b64.rs  fingerprint.rs  id.rs  lib.rs  phone_number.rs  secret_api_key.rs
(+13427 files in other folders)
