[package]
name = "footprint-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
env_logger = "0.9.0"
log = "0.4.14"
opentelemetry = "0.17.0"
tracing = "0.1.30"
tracing-actix-web = { version = "=0.5.0-rc.2", features = ["opentelemetry_0_17"]} 
tracing-opentelemetry = { version = "0.17" }
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = { version = "0.3", features = ["json", "registry", "env-filter"] }
uuid = { version = "0.8.1", features = ["v4"] }
