[package]
name = "footprint-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
env_logger = "0.9.0"
log = "0.4.14"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17.0"
tracing = "0.1.30"
tracing-actix-web = { version = "=0.5.0-rc.2", features = ["opentelemetry_0_17"]} 
tracing-subscriber = { version = "0.3", features = ["json", "registry", "env-filter"] }
actix-web-opentelemetry = { git = "https://github.com/OutThereLabs/actix-web-opentelemetry", tag = "v0.11.0-beta.7"}
uuid = { version = "0.8.2", features = ["v4"] }
opentelemetry-datadog = { version = "0.5.0", features = ["reqwest-client"] }
envconfig = "0.10.0"
dotenv = "0.15.0"
tracing-bunyan-formatter = "0.3.2"
tracing-error = "0.2.0"