[workspace.package]
version = "0.1.0"
authors = ["Footprint Engineering <eng@onefootprint.com>"]
description = "Footprint's core APIs, verification engine, and enclave service"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "components/api/core",
    "components/api/server",
    "components/api/wire_types",
    "components/api/routes/*",
    "components/enclave/crypto",
    "components/enclave/enclave",
    "components/enclave/proxy",
    "components/enclave/rpc",
    "components/db/core",
    "components/db/schema",
    "components/idv",
    "components/newtypes",
    "components/app_attest",
    "components/twilio",
    "components/privacy_pass",
    "components/webhooks",
    "components/integrations/alpaca",
    "external_tools/ditto",
    "external_tools/hooky",
    "internal_tools/scripts/workos",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_cbor = "0.11"
serde_repr = "0.1"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_with = "2.2.0"

base64 = "0.13"
hex = { version = "0.4", features = ["serde"] }
either = "1.6"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
openssl = "0.10.55"
strum_macros = { version = "0.24" }
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }
rand = { version = "0.8 " }
thiserror = "1.0"
itertools = "0.10.3"
tracing = "0.1.28"
lazy_static = "1.0"
once_cell = "1.13.1"
async-trait = "0.1"
derive_more = "0.99.17"

futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures = "0.3"

rust_decimal = "1.32"

uuid = { version = "1.1.2", features = ["serde", "v4"] }

# diesel
diesel = { version = "2.0.2", features = ["extras", "uuid", "postgres"] }
diesel-derive-newtype = "2.0.0-rc.0"
diesel_migrations = "2.0.0"

diesel-derive-enum = { rev = "e6aa69856245f083645a0087527236a6bff42c18", git = "https://github.com/adwhit/diesel-derive-enum", features = [
    "postgres",
] }
diesel_as_jsonb = "1.0.0"

deadpool-diesel = { version = "0.4.1", features = [
    "postgres",
    "serde",
    "postgres",
] }
deadpool = { version = "0.9.5", features = [
    "managed",
], default-features = false }

actix-web = "4.3.1"

paperclip = { version = "0.8.0", features = [
    "actix4",
    "actix4-validator",
    "actix-multipart",
    "uuid",
    "chrono",
    "actix-session",
    "v3",
    "rapidoc",
] }

webauthn-rs-core = { git = "https://github.com/kanidm/webauthn-rs", rev = "9ffd732fb9d75c3cc20057c12a41b3323f3417b2" }
webauthn-rs-proto = { git = "https://github.com/kanidm/webauthn-rs", rev = "9ffd732fb9d75c3cc20057c12a41b3323f3417b2" }

reqwest = { version = "0.11.13", features = [
    "json",
    "default-tls",
    "rustls-tls",
    "rustls-tls-manual-roots",
    "rustls-tls-webpki-roots",
    "native-tls",
] }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
reqwest-tracing = "0.4.5"
retry-policies = "0.1.2"

schemars = { version = "0.8", features = ["chrono", "uuid1", "preserve_order"] }

aws-types = "0.49"
aws-config = "0.49"
aws-sdk-s3 = "0.19"
aws-sdk-kms = "0.19.0"
aws-sdk-pinpointsmsvoicev2 = "0.19.0"
aws-sdk-pinpointemail = "0.19.0"
aws-sdk-pinpoint = "0.19.0"

x509-parser = "0.14"
test-case = "3.0.0"
mockall = "0.11.4"
url = "2.3.1"

sentry = "0.31.5"
sentry-actix = "0.31.5"
sentry-tracing = "0.31.5"

log = "0.4.14"
byteorder = "1.4"

opentelemetry_api = { version = "0.19.0", features = ["metrics"] }

enum_variant_type = "0.3.1"
