[workspace.package]
version = "0.1.0"
authors = ["Footprint Engineering <eng@onefootprint.com>"]
description = "Footprint's core APIs, verification engine, and enclave service"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "components/api/core",
    "components/api/server",
    "components/api/wire_types",
    "components/api/routes/_root",
    "components/api/routes/businesses",
    "components/api/routes/entities",
    "components/api/routes/hosted/*",
    "components/api/routes/index",
    "components/api/routes/integrations",
    "components/api/routes/onboarding",
    "components/api/routes/org",
    "components/api/routes/org_common",
    "components/api/routes/partner",
    "components/api/routes/private/*",
    "components/api/routes/users",
    "components/api/routes/vault_proxy",
    "components/api/routes/webhooks",
    "components/commands",
    "components/enclave/crypto",
    "components/enclave/enclave",
    "components/enclave/proxy",
    "components/enclave/rpc",
    "components/db/core",
    "components/db/schema",
    "components/idv",
    "components/newtypes",
    "components/app_attest",
    "components/twilio",
    "components/privacy_pass",
    "components/webhooks",
    "components/integrations/alpaca",
    "components/selfie_doc",
    "external_tools/ditto",
    "external_tools/hooky",
    "internal_tools/ai_playground",
]
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_cbor = "0.11"
serde_repr = "0.1"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_with = "2.2.0"

base64 = "0.13"
hex = { version = "0.4", features = ["serde"] }
either = "1.6"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
openssl = "0.10.55"
strum_macros = { version = "0.24" }
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }
rand = { version = "0.8 " }
thiserror = "1.0"
itertools = "0.10.3"
tracing = "0.1.28"
lazy_static = "1.0"
once_cell = "1.13.1"
async-trait = "0.1"
derive_more = "0.99.17"

futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures = "0.3"

rust_decimal = "1.32"

uuid = { version = "1.1.2", features = ["serde", "v4"] }

# diesel
diesel = { version = "2.0.2", features = [
    "extras",
    "uuid",
    "postgres",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
diesel_migrations = "2.0.0"

diesel-derive-enum = { rev = "e6aa69856245f083645a0087527236a6bff42c18", git = "https://github.com/adwhit/diesel-derive-enum", features = [
    "postgres",
] }
diesel_as_jsonb = "1.0.0"

deadpool-diesel = { version = "0.6.0", features = ["serde", "postgres"] }
deadpool = { version = "0.11.2", features = [
    "managed",
], default-features = false }

actix-web = "4.3.1"

paperclip = { git = "https://github.com/onefootprint/paperclip", rev = "59f5cde91d3f169344675d79ca6bbdb22cc92c24", features = [
    "actix4",
    "actix4-validator",
    "actix-multipart",
    "uuid",
    "chrono",
    "actix-session",
    "v3",
    "rapidoc",
] }

webauthn-rs-core = { version = "0.4.9", features = ["insecure-rs1"] }
webauthn-rs-proto = "0.4.9"

reqwest = { version = "0.11.13", features = [
    "json",
    "default-tls",
    "rustls-tls",
    "rustls-tls-manual-roots",
    "rustls-tls-webpki-roots",
    "native-tls",
] }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
reqwest-tracing = "0.4.5"
retry-policies = "0.1.2"
# Matched to version used by reqwest
hyper = { version = "0.14.18", default-features = false, features = [
    "tcp",
    "http1",
    "http2",
    "client",
    "runtime",
] }

aws-types = "1.0.0"
aws-config = { version = "1.0.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "0.39.0", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "0.39.0", features = ["behavior-version-latest"] }
aws-sdk-pinpointsmsvoicev2 = { version = "0.39.0", features = [
    "behavior-version-latest",
] }
aws-sdk-pinpointemail = { version = "0.39.0", features = [
    "behavior-version-latest",
] }
aws-sdk-pinpoint = { version = "0.39.0", features = [
    "behavior-version-latest",
] }
aws-credential-types = "1.0.0"

x509-parser = "0.14"
test-case = "3.0.0"
mockall = "0.11.4"
url = "2.3.1"

sentry = "0.31.5"
sentry-actix = "0.31.5"
sentry-tracing = "0.31.5"

log = "0.4.14"
byteorder = "1.4"

opentelemetry_api = { version = "0.19.0", features = ["metrics"] }

enum_variant_type = "0.3.1"

actix-multipart = "0.6.1"
mime = "0.3.16"
regex = "1.5"
anyhow = "1.0.79"
workos = "0.2"
openai = { git = "https://github.com/onefootprint/openai", rev = "c08091a41f2a50cba5e2668034911cdcc5db3f0a" }
