[workspace.package]
version = "0.1.0"
authors = ["Footprint Engineering <eng@onefootprint.com>"]
description = "Footprint's core APIs, verification engine, and enclave service"
edition = "2021"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[workspace]
resolver = "2"
members = [
    "components/api/errors",
    "components/api/core",
    "components/api/server",
    "components/api/wire_types",
    "components/api/routes/_root",
    "components/api/routes/businesses",
    "components/api/routes/entities",
    "components/api/routes/hosted/*",
    "components/api/routes/index",
    "components/api/routes/integrations",
    "components/api/routes/onboarding",
    "components/api/routes/org",
    "components/api/routes/org_common",
    "components/api/routes/partner",
    "components/api/routes/private/*",
    "components/api/routes/users",
    "components/api/routes/vault_proxy",
    "components/api/routes/webhooks",
    "components/commands",
    "components/enclave/crypto",
    "components/enclave/enclave",
    "components/enclave/proxy",
    "components/enclave/rpc",
    "components/db/core",
    "components/db/schema",
    "components/idv",
    "components/newtypes",
    "components/app_attest",
    "components/twilio",
    "components/privacy_pass",
    "components/vault_dr",
    "components/vault_dr_client",
    "components/webhooks",
    "components/integrations/alpaca",
    "components/selfie_doc",
    "external_tools/ditto",
    "external_tools/hooky",
    "internal_tools/ai_playground",
    "external_tools/footprint-dr",
    "internal_tools/scripts/avis",
]
[workspace.dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
env_logger = "0.9.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_cbor = "0.11"
serde_repr = "0.1"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_with = "2.2.0"

base64 = "0.13"
hex = { version = "0.4", features = ["serde"] }
either = "1.6"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
openssl = "0.10.55"
strum_macros = { version = "0.24" }
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }
rand = { version = "0.8 " }
thiserror = "1.0"
itertools = "0.10.3"
tracing = "0.1.28"
tracing-core = "0.1.32"
tracing-serde = "0.1.3"
lazy_static = "1.0"
once_cell = "1.13.1"
async-trait = "0.1"
derive_more = "0.99.17"

futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures = "0.3"

rust_decimal = "1.32"
rust_decimal_macros = "1.32"

uuid = { version = "1.1.2", features = ["serde", "v4"] }

# diesel
diesel = { version = "2.0.2", features = [
    "extras",
    "uuid",
    "postgres",
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }
diesel_migrations = "2.0.0"

diesel-derive-enum = { rev = "e6aa69856245f083645a0087527236a6bff42c18", git = "https://github.com/adwhit/diesel-derive-enum", features = [
    "postgres",
] }
diesel_as_jsonb = "1.0.0"

deadpool-diesel = { version = "0.6.0", features = ["serde", "postgres"] }
deadpool = { version = "0.11.2", features = [
    "managed",
], default-features = false }

actix-web = "4.3.1"

paperclip = { git = "https://github.com/onefootprint/paperclip", rev = "282f59844138409fdaf909e86d34baccd8d1e9ec", features = [
    "actix4",
    "actix4-validator",
    "actix-multipart",
    "uuid",
    "chrono",
    "actix-session",
    "v3",
    "rapidoc",
] }

webauthn-rs-core = { version = "0.4.9", features = ["insecure-rs1"] }
webauthn-rs-proto = "0.4.9"

reqwest = { version = "0.11.13", features = [
    "json",
    "default-tls",
    "rustls-tls",
    "rustls-tls-manual-roots",
    "rustls-tls-webpki-roots",
    "native-tls",
    "blocking",
] }
reqwest-middleware = "0.2.2"
reqwest-retry = "0.2.2"
reqwest-tracing = "0.4.5"
retry-policies = "0.1.2"
# Matched to version used by reqwest
hyper = { version = "0.14.18", default-features = false, features = [
    "tcp",
    "http1",
    "http2",
    "client",
    "runtime",
] }

aws-types = "1.0.0"
aws-config = { version = "1.0.0", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "0.39.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "0.39.0", features = ["behavior-version-latest"] }
aws-sdk-kms = { version = "0.39.0", features = ["behavior-version-latest"] }
aws-sdk-pinpointsmsvoicev2 = { version = "0.39.0", features = [
    "behavior-version-latest",
] }
aws-sdk-pinpointemail = { version = "0.39.0", features = [
    "behavior-version-latest",
] }
aws-sdk-pinpoint = { version = "0.39.0", features = [
    "behavior-version-latest",
] }
aws-credential-types = { version = "1.0.0", features = [
    "hardcoded-credentials",
] }

x509-parser = "0.14"
test-case = "3.0.0"
mockall = "0.12.1"
predicates = "3.1.0"
url = "2.3.1"

sentry = "0.31.5"
sentry-actix = "0.31.5"
sentry-tracing = "0.31.5"

log = "0.4.14"
byteorder = "1.4"

opentelemetry_api = { version = "0.19.0", features = ["metrics"] }

enum_variant_type = "0.3.1"

actix-multipart = "0.6.1"
mime = "0.3.16"
regex = "1.5"
anyhow = "1.0.79"
workos = "0.2"
openai = { git = "https://github.com/onefootprint/openai", rev = "c08091a41f2a50cba5e2668034911cdcc5db3f0a" }
actix-cors = "0.6"
actix-rt = "2.7.0"
actix-web-httpauth = "0.8.0"
actix-web-opentelemetry = "0.13.0"
aead = "0.5.1"
aes-gcm = "0.10.3"
async-stripe = { version = "0.22.2", default-features = false }
aws-sdk-rekognition = "0.39.0"
aws-sdk-textract = "0.39.0"
bb8 = "0.7"
blind-rsa-signatures = "0.13"
bytes = "1.3.0"
card-validate = "2.3"
chacha20poly1305 = "0.10.1"
criterion = "0.5.1"
dashmap = "5.4.0"
der-parser = "8.2.0"
deunicode = "1.3.3"
elliptic-curve = "0.12.3"
email_address = "0.2.4"
enum_dispatch = "0.3.11"
envconfig = "0.10.0"
futures-core = "0.3"
geoutils = "0.5.1"
gethostname = "0.4.0"
hmac = "0.12.1"
http = "0.2.8"
image = "0.24.6"
ipnetwork = ">=0.12.2, <0.21.0"
josekit = "0.8.3"
jsonpath_lib = "0.3.0"
jwt-simple = "0.11.6"
launchdarkly-server-sdk = "1.0.0"
levenshtein = "1.0.5"
libc = "0.2"
openapiv3 = "1.0.3"
opentelemetry = "0.19"
opentelemetry-otlp = "0.12"
p256 = "0.11.1"
paste = "1.0"
pem = "1.1.1"
phonenumber = "0.3.3"
pin-project-lite = "0.2"
portpicker = "0.1.1"
pretty_env_logger = "0.4"
proc-macro-error = "1.0"
proc-macro2 = "1.0.40"
prometheus = { version = "0.13.3", default-features = false }
quote = "1.0.20"
rand_core = "0.6.3"
rand_regex = "0.17.0"
rsa = "0.9.2"
rustls = { version = "0.20", default-features = false }
rustls-pemfile = "1.0"
schemars = "0.8.15"
sec1 = "0.3.0"
sha2 = "0.10.6"
svix = "0.78.0"
syn = "1.0.98"
task-local-extensions = "0.1.4"
test-case-core = "3.0.0"
tokio-retry = "0.3"
tokio-rustls = "0.23"
tokio-test = "0.4.2"
tokio-vsock = "0.3"
tracing-actix-web = "0.7.5"
tracing-opentelemetry = "0.19"
tracing-subscriber = "0.3"
tracing-test = "0.2.3"
typedmap = "0.4.0"
urlencoding = "2.1.2"
webpki = "0.22"
zeroize = "1.6.0"
rpassword = "7.3.1"
keyring = "2.3.3"
termcolor = "1.1.3"
age = { version = "0.10.0", features = ["armor", "plugin"] }
age-core = "0.10.0"
age-plugin = "0.5.0"
bech32 = "0.9.0"
tempfile = "3.10.1"
