[package]
name = "footprint-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vsock = ["enclave_proxy/vsock"]

[dependencies]
actix-web = "4.0.1"
async-trait = "0.1"
env_logger = "0.9.0"
log = "0.4.14"
opentelemetry = { version = "0.17", features = [
    "rt-tokio",
    "metrics",
    "serialize",
] }
tracing-opentelemetry = "0.17"
tracing = "0.1.30"
tracing-actix-web = { version = "0.5.1", features = ["opentelemetry_0_17"] }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "registry",
    "env-filter",
] }
envconfig = "0.10.0"
dotenv = "0.15.0"
either = "1.6"
tracing-bunyan-formatter = "0.3.2"
opentelemetry-otlp = { version = "0.10", features = ["tonic", "metrics"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
crypto = { path = "../enclave/crypto" }
aws-config = "0.12.0"
aws-sdk-kms = "0.12.0"
thiserror = "1.0"
enclave_proxy = { path = "../enclave/proxy", default-features = false }
db = { path = "../db" }

anyhow = { version = "1.0" }
serde_json = { version = "1.0" }
serde_cbor = "0.11"
serde_repr = "0.1"
actix-cors = "0.6"
paperclip = { version = "0.7.0", features = [
    "actix4",
    "swagger-ui",
    "actix4-validator",
    "uuid",
    "chrono",
    "actix-session",
] }
mime = "0.3.16"
actix-session = { version = "0.6.2", features = ["cookie-session"] }
chrono = { version = "0.4" }
strum_macros = { version = "0.24" }

webauthn-rs-core = { git = "https://github.com/kanidm/webauthn-rs", rev = "9ffd732fb9d75c3cc20057c12a41b3323f3417b2"}
webauthn-rs-proto = { git = "https://github.com/kanidm/webauthn-rs", rev = "9ffd732fb9d75c3cc20057c12a41b3323f3417b2"}

url = "2.2.2"
newtypes = { path = "../newtypes" }
reqwest = "0.11"

sentry = "0.26.0"
sentry-actix = "0.26.0"
app-attest = { path = "../app_attest" }
