[package]
name = "app-attest"
version = "0.1.0"
edition = "2021"


[dependencies]
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "1.0"
hex = "0.4"
serde_bytes = "0.11"
serde_json = "1.0"
openssl = "0.10"
cbor = "0.4.1"
byteorder = "1.3.4"
x509-parser = "0.13"