[package]
name = "newtypes"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel-derive-newtype = "1.0.0"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.17"
paperclip = { version = "0.7.0", features = ["actix4"] }
serde_json = "1.0"
