[package]
name = "footprint-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[features]
default = []
vsock = ["enclave_proxy/vsock"]

[dependencies]
actix-web = "4.0.1"
async-trait = "0.1"
env_logger = "0.9.0"
log = "0.4.14"
opentelemetry = { version = "0.17", features = [
    "rt-tokio",
    "metrics",
    "serialize",
] }
tracing-opentelemetry = "0.17"
tracing = "0.1.30"
tracing-actix-web = { version = "0.5.1", features = ["opentelemetry_0_17"] }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "registry",
    "env-filter",
] }
envconfig = "0.10.0"
dotenv = "0.15.0"
either = "1.6"
tracing-bunyan-formatter = "0.3.2"
opentelemetry-otlp = { version = "0.10", features = ["tonic", "metrics"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
crypto = { path = "../enclave/crypto" }
# Note: Updating to latest aws-config crate (^0.49) will break some types 
# in the 0.17 versions of aws sdks
aws-config = "0.47.0"
aws-sdk-s3 = "0.17.0"
aws-sdk-kms = "0.17.0"
thiserror = "1.0"
enclave_proxy = { path = "../enclave/proxy", default-features = false }

serde_json = { version = "1.0" }
serde_cbor = "0.11"
serde_repr = "0.1"
actix-cors = "0.6"
paperclip = { version = "0.7.1", features = [
    "actix4",
    "swagger-ui",
    "actix4-validator",
    "uuid",
    "chrono",
    "actix-session",
    "v3"
] }
mime = "0.3.16"
chrono = { version = "0.4" }
strum_macros = { version = "0.24" }
actix-web-httpauth = "0.8.0"

webauthn-rs-core = { git = "https://github.com/kanidm/webauthn-rs", rev = "9ffd732fb9d75c3cc20057c12a41b3323f3417b2"}
webauthn-rs-proto = { git = "https://github.com/kanidm/webauthn-rs", rev = "9ffd732fb9d75c3cc20057c12a41b3323f3417b2"}

url = "2.2.2"
newtypes = { path = "../newtypes" }
reqwest = "0.11"

sentry = "0.27.0"
sentry-actix = "0.27.0"
sentry-tracing = "0.27.0"
app-attest = { path = "../app_attest" }
itertools = "0.10.1"
lazy_static = "1.0"
strum = { version = "0.24" }

workos = "0.2"

db = { path = "../db" }
twilio = { path = "../twilio"}
idv = { path = "../idv" }

api_types = { path = "../api_types" }

[dev-dependencies]
test-case = "2.1.0"
