[package]
name = "footprint-core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
actix-web = "4.0.1"
async-trait = "0.1"
env_logger = "0.9.0"
log = "0.4.14"
opentelemetry = { version = "0.17.0", features = [
    "rt-tokio",
    "metrics",
    "serialize",
] }
tracing-opentelemetry = "0.17"
tracing = { workspace = true }
tracing-actix-web = { version = "0.6.0", features = ["opentelemetry_0_17"] }
tracing-subscriber = { version = "0.3", features = [
    "json",
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.2"
envconfig = "0.10.0"
dotenv = { workspace = true }
either = "1.6"
opentelemetry-otlp = { version = "0.10", features = ["tonic", "metrics"] }
tokio = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
crypto = { path = "../enclave/crypto" }

# Note: Updating to latest aws-config crate (^0.49) will break some types 
# in the 0.17 versions of aws sdks
aws-config =  { workspace = true }
aws-sdk-s3 =  { workspace = true }
aws-sdk-kms =  { workspace = true }

thiserror = { workspace = true }
enclave_proxy = { path = "../enclave/proxy" }

serde_json = { workspace = true }
serde_cbor = { workspace = true }
serde_repr = { workspace = true }
actix-cors = "0.6"
paperclip = { workspace = true }
mime = "0.3.16"
chrono = { workspace = true }
strum_macros = { workspace = true }
actix-web-httpauth = "0.8.0"
actix-web-prom = "0.6.0"

webauthn-rs-core = { workspace = true }
webauthn-rs-proto = { workspace = true }

url = "2.2.2"
newtypes = { path = "../newtypes" }
reqwest = { workspace = true }

sentry = "0.27.0"
sentry-actix = "0.27.0"
sentry-tracing = "0.27.0"
app-attest = { path = "../app_attest" }
itertools = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }

workos = "0.2"
byteorder = "1.4"

macros = { path = "../macros" }
db = { path = "../db" }
twilio = { path = "../twilio"}
idv = { path = "../idv" }
privacy_pass = { path = "../privacy_pass" }

api_wire_types = { path = "../api_wire_types" }

levenshtein = "1.0.5"
gethostname = "0.4.0"
launchdarkly-server-sdk = "1.0.0"

jsonpath_lib = "0.3.0"
urlencoding = "2.1.2"

[dev-dependencies]
test-case = "2.1.0"
enclave = { path = "../enclave/enclave"}
portpicker = "0.1.1"
