[package]
name = "app-attest"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
thiserror = { workspace = true }
serde_bytes = { workspace = true }
openssl = { workspace = true }
byteorder = { workspace = true }
x509-parser = { workspace = true }
reqwest = { workspace = true }
jwt-simple = "0.11.6"
chrono = { workspace = true }
der-parser = "8.2.0"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
josekit = "0.8.3"
