[package]
name = "app-attest"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
thiserror = { workspace = true }
serde_bytes = { workspace = true }
openssl = { workspace = true }
byteorder = { workspace = true }
x509-parser = { workspace = true }
reqwest = { workspace = true }
jwt-simple = { workspace = true }
chrono = { workspace = true }
der-parser = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
josekit = { workspace = true }
