[package]
name = "billing"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
async-stripe = { version = "0.18.2", default-features = false, features = ["checkout","billing","runtime-tokio-hyper"] }
db = { path = "../db/core" }
newtypes = { path = "../newtypes" }
feature_flag = { path = "../feature_flag" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }