[package]
name = "billing"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
doctest = false

[dependencies]
async-stripe = { version = "0.22.2", default-features = false, features = ["checkout","billing","runtime-tokio-hyper"] }
db = { path = "../db/core" }
newtypes = { path = "../newtypes" }
feature_flag = { path = "../feature_flag" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
itertools = { workspace = true }


[dev-dependencies]
test-case = { workspace = true }
