[package]
name = "commands"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_core = { path = "../api/core" }
billing = { path = "../billing" }
db = { path = "../db/core" }
db_schema = { path = "../db/schema" }
newtypes = { path = "../newtypes" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.4.18", features = ["derive"] }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
