[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"

openssl = "0.10.38"

strum_macros = { version = "0.24" }
strum = { version = "0.24" }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8 " }
thiserror = "1.0"
crypto = { path = "../enclave/crypto" }
actix-rt = { version = "2.7" }
serde_json = { version = "1.0" }
newtypes = { path = "../newtypes" }
itertools = "0.10.3"
tracing = "0.1.30"
deadpool-diesel = { version = "0.4.0", features=["postgres", "serde", "postgres"]}
deadpool = { version = "0.9.5", features=["managed"], default-features = false}

uuid = { version = "1.1.2", features = ["serde", "v4"] }

# diesel
diesel = { version = "2.0.0", features = ["extras", "uuid"] }
diesel-derive-newtype = "2.0.0-rc.0"
diesel_migrations = "2.0.0"