[package]
name = "db"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
crypto = { path = "../enclave/crypto" }
macros = { path = "../macros" }
newtypes = { path = "../newtypes" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
openssl = { workspace = true }

strum_macros = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

itertools = { workspace = true }
tracing = { workspace = true }

deadpool-diesel = { workspace = true }
deadpool = { workspace = true }

uuid = { workspace = true }

diesel = { workspace = true, features = ["extras", "uuid", "postgres"] }
diesel-derive-newtype = { workspace = true }
diesel_migrations = { workspace = true }

[dev-dependencies]
actix-rt = "2.7.0"
