[package]
name = "ditto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1", features = ["full"] }
bytes = "1.3.0"
hyper = { version = "1.0.0-rc.2", features = ["full"] }
http-body-util = { version = "=0.1.0-rc.2" }
